--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.js">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="discography.html">Discography</a></li>
-            <li><a href="songs.html">Songs</a></li>
+            <li><a href="discography.js">Discography</a></li>
+            <li><a href="songs.js">Songs</a></li>
         </ul>
     </nav>
 
