--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li><a href="index.js">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.js">About</a></li>
             <li><a href="discography.js">Discography</a></li>
             <li><a href="songs.js">Songs</a></li>
         </ul>
