--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <nav>
         <ul>
-            <li><a href="index.js">Home</a></li>
-            <li><a href="about.js">About</a></li>
-            <li><a href="discography.js">Discography</a></li>
-            <li><a href="songs.js">Songs</a></li>
+            <li><a href="pages/index.js">Home</a></li>
+            <li><a href="pages/about.js">About</a></li>
+            <li><a href="pages/discography.js">Discography</a></li>
+            <li><a href="pages/songs.js">Songs</a></li>
         </ul>
     </nav>
 
